--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,15 @@ h1 {
   top: 50%;
   transform: translateY(-50%);
 }
+
+.img-background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50vw;
+  height: 100%;
+  object-fit: contain;
+  z-index: 0;
+  opacity: 0.08;
+  pointer-events: none;
+}
